Fix vertical alignment

--- a/ideascube/static/ideascube/main.css
+++ b/ideascube/static/ideascube/main.css
@@ -499,7 +499,7 @@ html[dir='rtl'] .boxid {
     right: -81px;
 }
 .logo {
-    padding-top: 5px;
+    padding-top: 15px;
     width: 250px;
     height: 80px
 }
